force-app/main/default/objects/Account/fields/Cluster_Group__c.field-meta.xml
<CustomField>
    <fullName>Cluster_Group__c</fullName>
    <label>Cluster Group</label>
    <type>Text</type>
    <length>80</length>
</CustomField>