force-app/main/default/objects/Account/fields/Customer_Rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_Rating__c</fullName>
    <label>Customer Rating</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>1</scale>
</CustomField>