force-app/main/default/objects/Account/fields/Latitude__c.field-meta.xml
<CustomField>
    <fullName>Latitude__c</fullName>
    <label>Latitude</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>6</scale>
    <description>Geographic latitude of the restaurant, derived from its address. Used for delivery-time and routing context.</description>
</CustomField>