force-app/main/default/objects/Account/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <type>Number</type>
    <precision>9</precision>
    <scale>6</scale>
    <description>Geographic longitude of the restaurant, derived from its address. Used for delivery-time and routing context.</description>
</CustomField>