force-app/main/default/objects/Account/fields/Offering_Description__c.field-meta.xml
<CustomField>
    <fullName>Offering_Description__c</fullName>
    <label>Offering Description</label>
    <type>Html</type>
    <length>32768</length>
    <description>Rich-text description of the restaurant's offering — cuisine, signature dishes, and what makes it stand out. Used for customer-facing summaries.</description>
</CustomField>