force-app/main/default/objects/Account/fields/Restaurant_Address__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Address__c</fullName>
    <label>Restaurant Address</label>
    <type>TextArea</type>
</CustomField>