force-app/main/default/objects/Account/fields/Restaurant_Type__c.field-meta.xml
<CustomField>
    <fullName>Restaurant_Type__c</fullName>
    <label>Restaurant Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Indian</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Pizza</fullName>
            </value>
            <value>
                <fullName>Burger</fullName>
            </value>
            <value>
                <fullName>Sushi</fullName>
            </value>
            <value>
                <fullName>Thai</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Italian</fullName>
            </value>
            <value>
                <fullName>Greek</fullName>
            </value>
            <value>
                <fullName>Lebanese</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>