force-app/main/default/objects/Account/recordTypes/Restaurant.recordType-meta.xml
<RecordType>
    <fullName>Restaurant</fullName>
    <active>true</active>
    <label>Restaurant</label>
    <description>Restaurants available for Pronto group ordering (Amsterdam set, v1).</description>
</RecordType>